[tool.poetry]
name = "trustbot"
version = "0.1.0"
description = "Trust bot"
authors = ["mihalin <stopa3.10.1996@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "^2.9.2"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
bot = "main"
